@@ -1,4 +1,6 @@
 6.30_02
+    - Split INSTALLSCRIPT into INSTALLSCRIPT, INSTALLSITESCRIPT and
+      INSTALLVENDORSCRIPT so it now honors INSTALLDIRS. [bleadperl@26536]
     - Minor fix to work with Pod::man 2.04. [bleadperl@26457]
     - $Revision was broken.
     - Updated our internal version of Test::More to catch a few warnings.
